# ifcb-data-pipeline

./: .Renviron-template  .gitignore  README.md  ifcb-dashboard-metadata-pipeline.Rmd  ifcb-data-pipeline.Rmd  ifcb-image-export-pipeline-niva.Rmd  ifcb-image-export-pipeline.Rmd
code/: 03_delete_duplicates.R  convert_h5_to_irfcb_format.R  count_pngs.R  count_pngs_images.R  download_dashboard_data.R  export_shark.R  extract_all.R  extract_classified_images.R  extract_features.R  helpers.R  ifcb_copy_class_files.R  ifcb_delivery_data_to_shark.R  ifcb_delivery_data_to_shark_matlab.R  ifcb_hab_alert.R  ifcb_ingest_and_qc.R  ifcb_merge_classifiers.R  list_bad_samples.R  list_remaining_files.R  merge_png_datasets.R  plot_diva_maps.R  plot_diva_maps_summer_cyano.R  run_all.R  run_all.Rmd  samples_frequency_map.R
code/annotations/: annotate.R  extract_images.R  (+10 more)
code/python/ifcb-features/: .gitignore  Dockerfile  FEATURES.md  LICENSE  README.md  extract_slim_features.py  pyproject.toml  requirements.txt
code/python/ifcb-features/.github/workflows/: docker.yml
code/python/ifcb-features/ifcb_features/: all.py  biovolume.py  blob_geometry.py  blobs.py  hog.py  perimeter.py  phasecong.py  segmentation.py
data/: bucket_samples_july_2024.txt  cruise_numbers.txt  sample_blacklist.tsv  tangesund_depthdata.csv  taxa_lookup.csv
templates/: MATLAB-template.md  README.md  README_-template.md  README_Baltic-template.md  README_NIVA.md  README_NIVA_general.md  README_Skagerrak-Kattegat-template.md  README_Tangesund-template.md  README_Tångesund-template.md  README_iRfcb-template.md
(+8 files in other folders)
