[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifcb-features"
version = "0.1.1"
description = "IFCB feature extraction tools"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Joe Futrelle", email = "jfutrelle@whoi.edu" }
]
keywords = ["image processing", "feature extraction", "computer vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "phasepack @ git+https://github.com/WHOIGit/phasepack@v1.6.1",
    "scikit-learn",
    "pyifcb @ git+https://github.com/joefutrelle/pyifcb@v1.2.1"
]

[project.urls]
Homepage = "https://github.com/WHOIGit/ifcb-features"
Repository = "https://github.com/WHOIGit/ifcb-features.git"
Issues = "https://github.com/WHOIGit/ifcb-features/issues"

[tool.hatch.build.targets.wheel]
packages = ["ifcb_features"]

[tool.hatch.build.targets.sdist]
include = [
    "/ifcb_features",
]

[tool.hatch.metadata]
allow-direct-references = true